--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.generate-unique-name=false
 spring.datasource.name=content
 
 logging.level.org.springframework.jdbc=DEBUG
+
+server.port=8080
