--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.generate-unique-name=false
 spring.datasource.name=content
 
 logging.level.org.springframework.jdbc=DEBUG
+
+cc.welcome-message=Welcome to the content calendar
+cc.about=This is a collection of my content
