--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,14 @@ spring.h2.console.enabled=true
 spring.datasource.generate-unique-name=false
 spring.datasource.name=content
 
+
 logging.level.org.springframework.jdbc=DEBUG
 
 cc.welcome-message=Welcome to the content calendar
 cc.about=This is a collection of my content
+
+spring.profiles.active=dev
+
+management.endpoints.web.exposure.include=*
+
+management.endpoint.health.show-details=always
